# codexia

docs/: remote-access.md
remote-server/: README.md  pyproject.toml
remote-server/codexia_remote/: __init__.py  app.py  client.py  settings.py
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/codex_client/: client.rs  event_handler.rs
src-tauri/src/services/: codex.rs  mod.rs
src/components/: SettingsSidebar.tsx
src/components/chat/: ChangesSummary.tsx  ChatInterface.tsx  MessageList.tsx
src/components/dialogs/: McpDialog.tsx
src/components/filetree/: FileTreeView.tsx  FileViewer.tsx
src/components/layout/: AppHeader.tsx
src/hooks/: useCodexEvents.ts  useDiffActions.ts
src/hooks/codexEvents/: commandHandlers.ts  diffUtils.ts  messageHandlers.ts  sessionHandlers.ts  types.ts
src/lib/: tauri-proxy.ts
src/pages/: chat.tsx
src/services/: configService.ts  diffService.ts  sessionManager.ts
src/stores/: EphemeralStore.ts
src/utils/: usageAnalysis.ts  webFrameworkDetection.ts
