[project]
name = "codexia-remote-server"
version = "0.1.0"
description = "Remote HTTP bridge for Codexia"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.5.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"
